# SharedMemoryCppToPython

./: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  SharedMemoryManager.hpp  cmake_install.cmake  mesh.proto  mesh_pb2.py  run  test.cpp  test.py
include/: SharedMemoryManager.hpp  mesh.pb.cc  mesh.pb.h
